--- a/frontend/ui/materialYou/components/sidePage/style.module.scss
+++ b/frontend/ui/materialYou/components/sidePage/style.module.scss
@@ -49,29 +49,16 @@
           }
         }
       }
-
-      .RightContainer {
-        width: 100%;
-        height: 100%;
-        overflow: hidden;
-        background-color: var(--background-color);
-        border-radius: calc(var(--border-radius) * 2);
-
-        .RightContainer-Content {
-          height: 100%;
-          overflow: hidden;
-
-          > section {
-            position: relative;
-            box-sizing: border-box;
-            flex: 1 1 100%;
-            width: 100%;
-            height: 100%;
-            overflow: auto;
-            scrollbar-gutter: stable;
-          }
-        }
-      }
     }
   }
+}
+
+.Container-common {
+  @apply relative h-full w-full overflow-hidden rounded-3xl;
+
+  background-color: var(--background-color);
+}
+
+.ScrollArea-Thumb {
+  background-color: var(--scroller-color);
 }
